--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+20150805_provisioning_testing_with_sergei/terraform_config/variables.tf
