--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-20150805_provisioning_testing_with_sergei/terraform_config/terraform.tfvars
+20150805_provisioning_testing_with_sergei/*/terraform.tfvars
