working on automation of full process, better docs

--- a/20150805_provisioning_testing_with_sergei/terraform_hadoop_config/playbooks/ambari.yml
+++ b/20150805_provisioning_testing_with_sergei/terraform_hadoop_config/playbooks/ambari.yml
@@ -3,3 +3,5 @@
   tasks:
     - name: install ambari-server
       yum: name=ambari-server state=present
+    - name: ambari start
+      service: name=ambari-server state=restarted enabled=yes
