Working on resetting agent

--- a/20150805_provisioning_testing_with_sergei/terraform_hadoop_config/playbooks/ambari.yml
+++ b/20150805_provisioning_testing_with_sergei/terraform_hadoop_config/playbooks/ambari.yml
@@ -12,8 +12,8 @@
     - name: copy Blueprints cluster config
       copy: src=cluster_creation.json dest=/tmp/cluster_creation.json
     - name: start ambari-agent
-      command: ambari-agent start
+      command: ambari-agent restart
     - name: load Blueprints
-      command: curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://localhost:8080//api/v1/blueprints/HadoopBlueprint --data "@/tmp/blueprint.json"
+      command: 'curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://localhost:8080/api/v1/blueprints/HadoopBlueprint --data "@/tmp/blueprint.json"'
     - name: load Blueprints Cluster
-      command: curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://localhost:8080//api/v1/clusters/HadoopCluster --data "@/tmp/cluster_creation.json"
+      command: 'curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://localhost:8080/api/v1/clusters/HadoopCluster --data "@/tmp/cluster_creation.json"'
