need to start this service

--- a/20150805_provisioning_testing_with_sergei/terraform_hadoop_config/playbooks/common.yml
+++ b/20150805_provisioning_testing_with_sergei/terraform_hadoop_config/playbooks/common.yml
@@ -19,3 +19,5 @@
       command: 'ambari-agent stop'
     - name: reset ambari-agent
       command: 'ambari-agent reset ambari'
+    - name: start ambari-agent
+      command: 'ambari-agent start'
