--- a/20150805_provisioning_testing_with_sergei/terraform_hadoop_config/terraform.tfvars.template
+++ b/20150805_provisioning_testing_with_sergei/terraform_hadoop_config/terraform.tfvars.template
@@ -3,3 +3,6 @@ secret_key = ""
 do_token = "0000000111111112222222..."
 ssh_fingerprint = "none"
 ami_id = "ami-8997afe0"
+name_key = "NAME"
+vol_size = "30"
+ssh_key = "ssh_key_name"
