--- a/20150805_provisioning_testing_with_sergei/terraform_hadoop_rheos_config/playbooks/ambari.yml
+++ b/20150805_provisioning_testing_with_sergei/terraform_hadoop_rheos_config/playbooks/ambari.yml
@@ -13,9 +13,9 @@
       copy: src=cluster_creation.json dest=/tmp/cluster_creation.json
     - name: start ambari-agent
       command: ambari-agent restart
-    - name: pause for ambari
-      pause: minutes=1
-    - name: load Blueprints
-      command: 'curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://localhost:8080/api/v1/blueprints/HadoopBlueprint --data "@/tmp/blueprint.json"'
-    - name: load Blueprints Cluster
-      command: 'curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://localhost:8080/api/v1/clusters/HadoopCluster --data "@/tmp/cluster_creation.json"'
+#    - name: pause for ambari
+#      pause: minutes=1
+#    - name: load Blueprints
+#      command: 'curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://localhost:8080/api/v1/blueprints/HadoopBlueprint --data "@/tmp/blueprint.json"'
+#    - name: load Blueprints Cluster
+#      command: 'curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://localhost:8080/api/v1/clusters/HadoopCluster --data "@/tmp/cluster_creation.json"'
