--- a/20171228_jhipster_prototyping/.yo-rc.json
+++ b/20171228_jhipster_prototyping/.yo-rc.json
@@ -13,7 +13,7 @@
     "clusteredHttpSession": false,
     "websocket": false,
     "databaseType": "sql",
-    "devDatabaseType": "postgresql",
+    "devDatabaseType": "h2Disk",
     "prodDatabaseType": "postgresql",
     "searchEngine": false,
     "messageBroker": false,
@@ -28,6 +28,7 @@
     "applicationType": "monolith",
     "testFrameworks": [],
     "jhiPrefix": "jhi",
-    "enableTranslation": false
+    "enableTranslation": false,
+    "enableHibernateCache": false
   }
 }
